--- a/site/image.html
+++ b/site/image.html
@@ -9,14 +9,20 @@
 </head>
 <body>
   <header>
-    <h1><!-- TODO: Kuva-sivun H1 --></h1>
+    <h1>Tämä on kuva!</h1>
     <nav aria-label="Päävalikko">
-      <!-- TODO: Sama navigaatio kuin muilla sivuilla -->
+<ul>
+  <li><a href="index.html">Etusivu</a></li>
+  <li><a href="form.html">Lomake</a></li>
+  <li><a href="image.html">Kuva</a></li>
+  <li><a href="table.html">Taulukko</a></li>
+</ul>
     </nav>
   </header>
   <main>
     <!-- TODO: Lisää <img> ja merkityksellinen alt-teksti (tai tyhjä alt dekoratiiviselle kuvalle).
          Voit käyttää paikallista tiedostoa ./assets/ tai ulkoista URL:ia. -->
+         <img src="C:\Users\OMISTAJA\Pictures\kissa.jpg" alt="Kuva kissasta">
   </main>
   <footer>
     <!-- TODO: Footer -->
