--- a/site/table.html
+++ b/site/table.html
@@ -9,13 +9,47 @@
 </head>
 <body>
   <header>
-    <h1><!-- TODO: Taulukko-sivun H1 --></h1>
+    <h1>This is a table!</h1>
     <nav aria-label="Päävalikko">
-      <!-- TODO: Sama navigaatio kuin muilla sivuilla -->
+<ul>
+  <li><a href="index.html">Etusivu</a></li>
+  <li><a href="form.html">Lomake</a></li>
+  <li><a href="image.html">Kuva</a></li>
+  <li><a href="table.html">Taulukko</a></li>
+</ul>
     </nav>
   </header>
   <main>
     <!-- TODO: Lisää datataulukko, jossa on caption + thead/tbody -->
+     <table>
+      <caption>Kuukauden säästöt</caption>
+<thead>
+  <tr>
+    <th>Kuukausi</th>
+    <th>Säästöt</th>
+  </tr>
+</thead>
+ <tfoot>
+    <tr>
+      <td>Summa</td>
+      <td>250e</td>
+    </tr>
+  </tfoot>
+<tbody>
+
+  <tr>
+    <td>Kesäkuu</td>
+    <td>100e</td>
+  </tr>
+
+  <tr>
+    <td>Heinäkuu</td>
+    <td>150e</td>
+  </tr>
+ 
+
+</tbody>
+     </table>
   </main>
   <footer>
     <!-- TODO: Footer -->
