--- a/site/index.html
+++ b/site/index.html
@@ -9,13 +9,20 @@
 </head>
 <body>
   <header>
-    <h1><!-- TODO: Lisää sivun pääotsikko --></h1>
+    <h1>Index Heading</h1>
     <nav aria-label="Päävalikko">
-      <!-- TODO: Lisää navigaatiolinkit index.html, table.html, form.html, image.html -->
+<ul>
+  <li><a href="index.html">Etusivu</a></li>
+  <li><a href="form.html">Lomake</a></li>
+  <li><a href="image.html">Kuva</a></li>
+  <li><a href="table.html">Taulukko</a></li>
+</ul>
     </nav>
   </header>
   <main>
     <!-- TODO: Sisältö etusivulle -->
+     <p>Tämä on etusivu</p>
+     <p>Jippii</p>
   </main>
   <footer>
     <!-- TODO: Footer-sisältö -->
